components/sandbox/toolchain-host-operator/production/stone-prod-p02/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-ui-proxy-and-router
  namespace: toolchain-host-operator
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            policy-group.network.openshift.io/ingress: ""
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: rhtap-ui
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-same-namespace
  namespace: toolchain-host-operator
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
